--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # MacOS system files
 .DS_Store
 */.DS_Store
@@ -9,3 +8,9 @@ data/*/*
 
 # Jupyter notebook checkpoints
 notebooks/.ipynb_checkpoints/*
+
+# Python cache
+src/__pycache__/*
+
+# transformers checkpoints
+notebooks/error_detection/*/*
